syntax = "proto3";

package smartlinkdrive.vehicle.v1;

option go_package = "github.com/SmartLinkDrive/SmartLinkDrive/internal/api/proto/vehicle;vehiclepb";

// 车辆实体
message Vehicle {
  string id = 1;
  string plate_number = 2; // 车牌号
  string vin = 3;          // 车架号
  string model = 4;        // 车型
  string owner_id = 5;     // 归属用户ID
  string status = 6;       // 状态：available / busy / offline
  int64 created_at = 7;
  int64 updated_at = 8;
}

message UpsertVehicleRequest {
  Vehicle vehicle = 1;
}

message UpsertVehicleResponse {
  Vehicle vehicle = 1;
}

message GetVehicleRequest {
  string id = 1;
}

message GetVehicleResponse {
  Vehicle vehicle = 1;
}

message ListVehiclesRequest {
  string owner_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListVehiclesResponse {
  repeated Vehicle vehicles = 1;
  int64 total = 2;
}

service VehicleService {
  // 创建或更新车辆信息（管理员）
  rpc UpsertVehicle(UpsertVehicleRequest) returns (UpsertVehicleResponse);

  // 获取单个车辆信息
  rpc GetVehicle(GetVehicleRequest) returns (GetVehicleResponse);

  // 查询车辆列表（可按 owner_id 过滤）
  rpc ListVehicles(ListVehiclesRequest) returns (ListVehiclesResponse);
}

